--- a/src/global.css
+++ b/src/global.css
@@ -45,6 +45,8 @@ body {
 .main {
 	display: flex;
 	flex-direction: row;
+	justify-content: center;
+	align-items: center;
 }
 .main-text {
 	width: 40%;
@@ -97,3 +99,91 @@ button:hover {
 /**************
 * MAIN PHOTOS *
 **************/
+.main-photos {
+	position: relative;
+	padding-left: 100px;
+	display: flex;
+}
+.main-photos h3 {
+	text-align: center;
+	font-weight: 400;
+	font-size: 36px;
+	line-height: 45px;
+	width: 250px;
+	color: #000000;
+	position: relative;
+	left: 250px;
+	top: -20px;
+
+	text-shadow: 1px 1px 5px #feb74c;
+}
+.phone {
+	height: 450px;
+	width: auto;
+	position: absolute;
+	padding-top: 150px;
+}
+.preview {
+}
+.search {
+	top: 250px;
+	left: 370px;
+}
+.arrow {
+	width: 300px;
+	height: auto;
+	position: absolute;
+	left: 300px;
+	top: 100px;
+}
+
+/**************
+* RESPONSIVE *
+**************/
+/* Tablet */
+@media screen and (min-width: 768px) and (max-width: 1023px) {
+	.main {
+		display: flex;
+		flex-direction: column;
+	}
+	.main-text {
+		width: 100%;
+		height: max-content;
+		padding-right: 2rem;
+	}
+	.main-photos {
+		width: 100%;
+		display: flex;
+		margin: 0 auto;
+	}
+}
+
+/* Phone */
+@media screen and (max-width: 767px) {
+	.main {
+		display: flex;
+		flex-direction: column;
+	}
+	.main-text {
+		width: 100%;
+		height: max-content;
+		padding-right: 2rem;
+	}
+	.main-photos {
+		width: 100%;
+		display: flex;
+		justify-content: flex-start;
+		flex-direction: column;
+		margin: 0 auto;
+	}
+	.phone {
+		display: flex;
+		justify-content: center;
+	}
+
+	.main-photos h3 {
+		display: flex;
+		flex-direction: column;
+		justify-content: center;
+	}
+}
