--- a/src/global.css
+++ b/src/global.css
@@ -102,6 +102,7 @@ button:hover {
 	font-size: 2.25rem;
 	line-height: 2.813rem;
 	margin-top: 3.125rem;
+	margin-bottom: 3.125rem;
 	color: var(--black);
 	text-shadow: 1px 1px 5px var(--secondayYellow);
 }
