--- a/src/global.css
+++ b/src/global.css
@@ -13,7 +13,7 @@ body {
 	font-family: "Inder", "Trebuchet MS", "Lucida Sans Unicode", "Lucida Grande",
 		"Lucida Sans", Arial, sans-serif;
 	padding: 1rem;
-	font-size: 16px;
+	font-size: 2rem;
 }
 
 .navbar {
@@ -21,18 +21,18 @@ body {
 	flex-direction: row;
 	justify-content: flex-start;
 	align-items: center;
-	gap: 10px;
+	gap: 0.625rem;
 	color: var(--primaryYellow);
 }
 .navbar img {
-	width: 60px;
-	height: 33px;
+	width: 3.75rem;
+	height: 2rem;
 }
 .navbar h2 {
 	font-style: normal;
 	font-weight: 400;
-	font-size: 40px;
-	line-height: 50px;
+	font-size: 2.5rem;
+	line-height: 3.125rem;
 	display: flex;
 	align-items: center;
 	text-align: center;
@@ -82,7 +82,7 @@ body {
 	border-radius: 2.5rem;
 	font-weight: 700;
 	font-size: 1.2rem;
-	line-height: 29px;
+	line-height: 2rem;
 	width: max-content;
 	padding: 0.313rem 1.25rem;
 	margin: 0.5rem 0;
