--- a/src/global.css
+++ b/src/global.css
@@ -24,11 +24,11 @@ body {
 	gap: 0.625rem;
 	color: var(--primaryYellow);
 }
-.navbar img {
+.navbar > img {
 	width: 3.75rem;
 	height: 2rem;
 }
-.navbar h2 {
+.navbar > h2 {
 	font-style: normal;
 	font-weight: 400;
 	font-size: 2.5rem;
@@ -55,7 +55,7 @@ body {
 /**************
 ** MAIN TEXT **
 **************/
-.main-text h1 {
+.main-text > h1 {
 	font-weight: 400;
 	font-size: 7rem;
 	line-height: 7rem;
@@ -66,18 +66,18 @@ body {
 	display: inline;
 }
 @media screen and (max-width: 900px) {
-	.main-text h1 {
+	.main-text > h1 {
 		font-size: 5rem;
 		text-align: center;
 	}
 }
 
-.main-text p {
+.main-text > p {
 	font-size: 1rem;
 	line-height: 1.3rem;
 	color: var(--white);
 }
-.main-text button {
+.main-text > button {
 	background-color: var(--primaryYellow);
 	border-radius: 2.5rem;
 	font-weight: 700;
@@ -96,7 +96,7 @@ button:hover {
 /**************
 * MAIN PHOTOS *
 **************/
-.main-photos h3 {
+.main-photos > h3 {
 	text-align: center;
 	font-weight: 400;
 	font-size: 2.25rem;
